[package]
name = "re_mp4"
version = "0.1.0"
authors = ["rerun.io <opensource@rerun.io>"]
edition = "2018"
description = "MP4 parser"
documentation = "https://docs.rs/re_mp4"
readme = "README.md"
homepage = "https://github.com/rerun-io/mp4"
repository = "https://github.com/rerun-io/mp4"
keywords = ["mp4", "iso-mp4", "isobmff", "video", "multimedia"]
license = "MIT"
include = ["src", "Cargo.toml", "README", "LICENSE"]

[dependencies]
byteorder = "1"
bytes = "1.1.0"
log = "0.4.17"
num-rational = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "^1.0"
