[package]
authors = ["rerun.io <opensource@rerun.io>"]
categories = ["Multimedia", "Video"]
description = "MP4 parser"
edition = "2021"
homepage = "https://github.com/rerun-io/re_mp4"
include = ["src", "Cargo.toml", "README", "LICENSE"]
keywords = ["mp4", "iso-mp4", "isobmff", "video", "multimedia"]
license = "MIT"
name = "re_mp4"
publish = true
readme = "README.md"
repository = "https://github.com/rerun-io/re_mp4"
rust-version = "1.76"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]
byteorder = "1"
bytes = "1.1.0"
log = "0.4.17"
num-rational = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "^1.0"
